--- a/Python_OOP1_ClassInstance.ipynb
+++ b/Python_OOP1_ClassInstance.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7c931a63",
    "metadata": {
     "deletable": false,
@@ -93,8 +93,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "class Employee:\n",
+    "    pass\n"
    ]
   },
   {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "51f11a87",
    "metadata": {
     "deletable": false,
@@ -151,11 +151,38 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Employee object at 0x000001A48508B520>\n",
+      "<__main__.Employee object at 0x000001A48508B160>\n",
+      "Corey.Schafer@company.com\n",
+      "Test.User@company.com\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "emp_1 = Employee()\n",
+    "emp_2 = Employee()\n",
+    "\n",
+    "print(emp_1)\n",
+    "print(emp_2)\n",
+    "\n",
+    "emp_1.first = 'Corey'\n",
+    "emp_1.last = 'Schafer'\n",
+    "emp_1.email = 'Corey.Schafer@company.com'\n",
+    "emp_1.pay = '50000'\n",
+    "\n",
+    "emp_2.first = 'Test'\n",
+    "emp_2.last = 'User'\n",
+    "emp_2.email = 'Test.User@company.com'\n",
+    "emp_2.pay = '60000'\n",
+    "\n",
+    "print(emp_1.email)\n",
+    "print(emp_2.email)"
    ]
   },
   {
@@ -187,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2968735c",
    "metadata": {
     "deletable": false,
@@ -206,8 +233,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "class Employee:\n",
+    "    def __init__(self, first, last, pay):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.pay = pay\n",
+    "        self.email = first + '.' + last + '@company.com'\n"
    ]
   },
   {
@@ -238,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c9976e13",
    "metadata": {
     "deletable": false,
@@ -254,11 +285,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corey.Schafer@company.com\n",
+      "Test.User@company.com\n",
+      "Corey Schafer\n"
+     ]
+    }
+   ],
    "source": [
+    "emp_1 = Employee('Corey', 'Schafer', 50000)\n",
+    "emp_2 = Employee('Test', 'User', 60000)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(emp_1.email)\n",
+    "print(emp_2.email)\n",
+    "print('{} {}'.format(emp_1.first, emp_1.last))"
    ]
   },
   {
@@ -287,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e0bcd0ba",
    "metadata": {
     "deletable": false,
@@ -303,11 +347,34 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corey Schafer\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "class Employee:\n",
+    "    def __init__(self, first, last, pay):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.pay = pay\n",
+    "        self.email = first + '.' + last + '@company.com'\n",
+    "\n",
+    "\n",
+    "    def fullname(self):\n",
+    "        return '{} {}'.format(self.first, self.last)\n",
+    "\n",
+    "\n",
+    "emp_1 = Employee('Corey', 'Schafer', 50000)\n",
+    "emp_2 = Employee('Test', 'User', 60000)\n",
+    "\n",
+    "\n",
+    "print(emp_1.fullname())"
    ]
   },
   {
@@ -338,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b363d0ac",
    "metadata": {
     "deletable": false,
@@ -354,21 +421,51 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corey Schafer\n",
+      "Test User\n",
+      "Corey Schafer\n",
+      "Test User\n"
+     ]
+    }
+   ],
    "source": [
     "# You may need to create the instances again after adding a method to your class.\n",
     "# I pasted the code here.\n",
     "emp_1 = Employee('Corey', 'Schafer', 50000)\n",
     "emp_2 = Employee('Test', 'User', 60000)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "class Employee:\n",
+    "    \n",
+    "#defining the instance for first name, last name, pay, and creating email\n",
+    "    def __init__(self, first, last, pay):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.pay = pay\n",
+    "        self.email = first + '.' + last + '@company.com'\n",
+    "\n",
+    "#defining the instance for full name\n",
+    "    def fullname(self):\n",
+    "        return '{} {}'.format(self.first, self.last)\n",
+    "\n",
+    "emp_1 = Employee('Corey', 'Schafer', 50000)\n",
+    "emp_2 = Employee('Test', 'User', 60000)\n",
+    "\n",
+    "print(emp_1.fullname()) #new method\n",
+    "print(emp_2.fullname()) #new method\n",
+    "print(Employee.fullname(emp_1)) #class and passing the instance\n",
+    "print(Employee.fullname(emp_2)) #class and passing the instance\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -382,7 +479,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "fcd8e5600c78dc8181139d6b6899b341b496de32e884c62c14aad6d24e818eb7"
+   }
   }
  },
  "nbformat": 4,
