--- a/Python_OOP5_SpecialMethods.ipynb
+++ b/Python_OOP5_SpecialMethods.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "de561102",
    "metadata": {
     "deletable": false,
@@ -94,10 +94,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee('Corey', 'Schafer', 50000)\n",
+      "Corey Schafer - Corey.Schafer@email.com\n"
+     ]
+    }
+   ],
    "source": [
     "class Employee:\n",
-    "    \n",
+    "    num_of_emps = 0\n",
     "    raise_amount = 1.04\n",
     "    \n",
     "    def __init__(self, first, last, pay):\n",
@@ -113,19 +122,40 @@
     "    \n",
     "    def apply_raise(self):\n",
     "        self.pay = int(self.pay * self.raise_amount)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return \"Employee('{}', '{}', {})\".format(self.first, self.last, self.pay)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return '{} - {}'.format(self.fullname(), self.email)\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        return self.pay + other.pay\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.fullname())\n",
+    "\n",
     "        \n",
-    "dev_1 = Employee('Corey', 'Schafer', 50000)\n",
-    "dev_2 = Employee('Test', 'User', 60000)\n",
+    "emp_1 = Employee('Corey', 'Schafer', 50000)\n",
+    "emp_2 = Employee('Test', 'User', 60000)\n",
     "\n",
+    "#print(emp_1)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#print(repr(emp_1))\n",
+    "#print(str(emp_1))\n",
+    "\n",
+    "print(emp_1.__repr__())\n",
+    "print(emp_1.__str__())\n",
+    "\n",
+    "#print(emp_1 + emp_2)\n",
+    "\n",
+    "#print(len(emp_1))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -139,7 +169,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "fcd8e5600c78dc8181139d6b6899b341b496de32e884c62c14aad6d24e818eb7"
+   }
   }
  },
  "nbformat": 4,
